2.5.20070425

2.6 (0000-00-00)
Application:
- Infinite startup notification after remote file opening was fixed.
- Translations updated: German, Italian.

Libraries:
- libprocess: New GwySpectra object representing single point spectra.
- libgwyddion: New class of curve fitting presets: GwyFDCurvePreset.
- libgwyddion: New math function to test whether a point is inside a polygon.
- libgwydgets: 3D view shows value units in z labels (instead of lateral).
- libgwyprocess: Bogus complex 2D FFT transform in the case of
  gwy_fft_simple() backend was fixed.
- libgwyapp: Possible crash in Document history when a file is saved under a
  new name was fixed.
- libgwydgets: gwy_data_view_export_pixbuf() honours realsquare setting.
- libgwyapp: Data browser acquired a Spectra tab and its API some SPS related
  functions.
- libgwyapp: Up to date thumbnails are no longer overwritten.
- libgwyprocess: Fractal interpolation works with Microsoft floating point
  implementation.
- libgwydgets: Impossibility to edit graph selection boundaries when it was
  drawn the `wrong' direction was fixed.
- libgwydgets: Invisible graph label (key) getting in the way was fixed.
- libprocess: New grain distribution quantities x and y centre position.
- libgwydgets: GwyLayerBasic has a new "default-range-type" property for color
  range mapping type used when none is set in the data.
- libgwyprocess: Wrong type assertions in gwy_data_line_fft_raw() were fixed.
- libgwyprocess: Complex one-dimensional transforms actually work with FFTW3.
- libgwyddion: New NL fitter preset Gaussian IPSDF.
- libgwyddion: Displayed formula of Exponential IPSDF was corrected to match
  the actual formula.
- libgwydgets: Logarithmic axes sometimes starting at values larger than the
  minimum were fixed.
- libgwydgets: GwyGraph's model is registered as property "model".

Modules:
- Path level tool (new): Levels rows along arbitrary lines.
- Spectro tool (new): Visualize and extract single point spectra.